--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
 </div>
 <div class="progress_bar"></div>
 <div class="loaderWrap"></div>
-	<header class="none">
-		<h1>We Nighters</h1>
-		<img src="img/bamboo-black.png" height="27">
+	<header>
+		<h1>Vodsky et Whika</h1>
 		  <ul id="menuWrap" class="">
 			<li id="profile" class="left menu-item menu-item-active icon icon-user" data-linkedcontent="#profileWrap"><span></span></li>
 			<li id="events"  class="left menu-item icon icon-glass" data-linkedcontent="#eventsWrap"><span></span></li>
@@ -48,8 +47,8 @@
 			</div>
 		</div>
 		<section id="contentWrap" class="">
-		<section id="landingWrap" class="centered ">
-			<h2>S'ennuyer en soirée, c'est terminé.</h2>
+		<section id="landingWrap" class="centered revealed">
+			<h2>Une soirée en moins d'une minute</h2> 
 			<section id="landingIntro">
 				<div class="l-item">
 					<div class="l-image"><img width="80" src="img/connect.png"></div>
@@ -62,7 +61,7 @@
 					<div class="l-desc">Dialoguer avec les dizaines de personnes qui proposent des soirées près de chez vous.</div>
 				</div>
 				<div class="l-item">
-					<div class="l-image"><img width="80" src="img/whatever-1.png"></div>
+					<div class="l-image"><img width="65" src="img/whatever.png"></div>
 					<div class="l-step">Whatever</div>
 					<div class="l-desc">Before, apéro, soirée apparte, prendre une bouteille en boite… la nuit vous appartient ! </div>
 				</div>
