--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="fr">
 <head>
-	<title>Bamboo Nights</title>
+	<title>WeNighters</title>
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Raleway:800' rel='stylesheet' type='text/css'>
@@ -68,12 +68,9 @@
 			</section>
 			<section id="landingGo">
 				<center>Le prochain évènement commence dans exactement : 45min </center>
-				<button class="themeBtn">Ce soir, c'est la folie !</button>
+				<button class="themeBtn">Inscription</button>
 			</section>
 		</section>
-			<section id="socialWrap" class="none centered">
-				<input type="submit" class="themeBtn" id="facebook" value="facebook"></input>
-			</section>
 			<section id="loginWrap" class="none centered">
 			  <div class="">
 				<h2>Identifiez-vous!</h2>
