--- a/index.html
+++ b/index.html
@@ -18,12 +18,8 @@
 	<link rel="stylesheet" href="/css/landing.css">
 </head>
 <body>
+<div id="fb-root"></div>
 <script src="/js/fb.js"></script>
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-</fb:login-button>
-
-<div id="status">
-</div>
 <div class="overlay overlay-high">
 	<div class="overlayMsgWrap">
 	</div>	
