--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
 </head>
 <body>
 <div id="fb-root"></div>
-<script src="/js/fb.js"></script>
+
+ <script>
+  (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/fr_FR/sdk.js";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+  </script>
+
 <div class="overlay overlay-high">
 	<div class="overlayMsgWrap">
 	</div>	
