--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 		<h5>L'abus de soirées est dangereux pour la santé</h5>
 		  <ul id="menuWrap" class="">
 			<li id="profile" class="left menu-item menu-item-active icon icon-user" data-linkedcontent="#profileWrap"><span></span></li>
+			<li id="search" class="left menu-item icon icon-search" data-linkedcontent="#searchUsersWrap" ><span></span></li>
 			<li id="events"  class="left menu-item icon icon-glass" data-linkedcontent="#eventsWrap"><span></span></li>
 			<li id="create" class="left menu-item icon icon-plus" data-linkedcontent="#createEventWrap"><span></span></li>
 			<li id="management" class="left menu-item icon icon-users" data-linkedcontent="#manageEventsWrap" ><span></span></li>
-			<li id="search" class="left menu-item icon icon-search" data-linkedcontent="#searchUsersWrap" ><span></span></li>
 			<li id="settings" class="right menu-item icon icon-cog" data-linkedcontent="#settingsWrap" ><span></span></li>
 			<li id="contact" class="right menu-item icon icon-mail-alt" data-linkedcontent="#contactWrap" ><span></span></li>
 		  </ul>
@@ -112,7 +112,7 @@
 		-->
 			<section id="landingGo">
 				<center>Site de rencontres amicales pour êtres humains hautement sociables</center>
-				<button class="themeBtn">On s'en fou</button>
+				<button class="themeBtn">Je m'inscris quand même</button>
 			</section>
 		</section>
 			<section id="signupWrapp" class="none centered">
