--- a/public/css/fontello/demo.html
+++ b/public/css/fontello/demo.html
@@ -305,6 +305,7 @@ body {
       <div class="row">
         <div title="Code: 0xe820" class="the-icons span3"><i class="icon-ellipsis"></i> <span class="i-name">icon-ellipsis</span><span class="i-code">0xe820</span></div>
         <div title="Code: 0xe821" class="the-icons span3"><i class="icon-attention-alt"></i> <span class="i-name">icon-attention-alt</span><span class="i-code">0xe821</span></div>
+        <div title="Code: 0xe822" class="the-icons span3"><i class="icon-up-dir"></i> <span class="i-name">icon-up-dir</span><span class="i-code">0xe822</span></div>
         <div title="Code: 0xe823" class="the-icons span3"><i class="icon-forward-1"></i> <span class="i-name">icon-forward-1</span><span class="i-code">0xe823</span></div>
       </div>
     </div>
